# ImageZigZag

./: BinaryImageZigzagHomology.py  README.md  Tooltip.py  TreeviewFrame.py  main.py  pyproject.toml  requirements.txt
Experiments/: Comparison.ipynb  Experiments.ipynb  ground_truth.txt
Experiments/dataset/acA1920-155um__22949301__20200710_094124535/: frame0.pbm  frame1.pbm  frame10.pbm  frame11.pbm  frame12.pbm  frame13.pbm  frame14.pbm  frame15.pbm  frame16.pbm  frame17.pbm  frame18.pbm  frame19.pbm  frame2.pbm  frame20.pbm  frame21.pbm  frame22.pbm  frame23.pbm  frame24.pbm  frame25.pbm  frame26.pbm  frame27.pbm  frame28.pbm  frame29.pbm  frame3.pbm  frame30.pbm  frame31.pbm  frame32.pbm  frame33.pbm  frame34.pbm  frame35.pbm  frame36.pbm  frame37.pbm  frame38.pbm  frame39.pbm  frame4.pbm  frame40.pbm  frame41.pbm  frame42.pbm  frame43.pbm  frame44.pbm  (+20 more)
Experiments/dataset/acA1920-155um__22949301__20210628_091847394/: frame0.pbm  frame1.pbm  frame10.pbm  frame11.pbm  frame12.pbm  frame13.pbm  frame14.pbm  frame15.pbm  frame16.pbm  frame17.pbm  frame18.pbm  frame19.pbm  frame2.pbm  frame20.pbm  frame21.pbm  frame22.pbm  frame23.pbm  frame24.pbm  frame25.pbm  frame26.pbm  frame27.pbm  frame28.pbm  frame29.pbm  frame3.pbm  frame30.pbm  frame31.pbm  frame32.pbm  (+33 more)
Experiments/output_comparison/: results_centroids.csv  results_multitrack.csv  results_without_multitrack.csv
Experiments/output_dataset/: results.csv
Jupyter notebooks/: BinaryImageZigZagHomology.ipynb  SpermatozoaStaticAndCirclesDetection.ipynb
examples/: imagen1ByN.pbm  imagen2ByN.pbm  imagen3ByN.pbm
(+1115 files in other folders)
