[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imagezigzag"
version = "0.0.1"
authors = [
  { name="Jose Divasón", email="jose.divason@unirioja.es" },
  { name="Ana Romero", email="ana.romero@unirioja.es" },
]
dependencies = ["dionysus", "numpy", "Pillow", "matplotlib", "opencv-python"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jodivaso/ImageZigZagPersistence"